<resources>
    <string name="app_name">Know Your Government</string>
    <string name="no_internet">"No Internet connection"</string>
    <string name="devName">\u00A9 2023, Imaduddin Sheikh</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="google_civic_information_api">Google Civic Information API</string>
    <string name="data_provided_by">Data provided by:</string>
    <string name="location_permission_denied">No Data For Location</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="no_data_access">Data cannot be accessed/loaded without an internet connection.</string>
</resources>